fixed my new stuff lol