@@ -3,15 +3,14 @@ package cc.turtl.chiselmon.api.calc.type;
 import com.cobblemon.mod.common.api.types.ElementalType;
 
 import java.util.*;
-import java.util.stream.Stream;
 
 /**
  * Maps every attacking type to its damage multiplier against a typing.
  */
-public record TypingMatchups(Map<ElementalType, Float> multipliers) {
+public record TypingMatchups(Map<ElementalType, Float> multiplierMap) {
 
     public TypingMatchups {
-        multipliers = Collections.unmodifiableMap(multipliers);
+        multiplierMap = Map.copyOf(multiplierMap);
     }
 
     public List<ElementalType> getSuperWeak() {
@@ -22,9 +21,14 @@ public record TypingMatchups(Map<ElementalType, Float> multipliers) {
         return filterByMultiplier(2.0f);
     }
 
+    /**
+     * Gets all types that deal > 1.0x damage, sorted (4x then 2x).
+     */
     public List<ElementalType> getAllWeak() {
-        return Stream.of(getSuperWeak(), getWeak())
-                .flatMap(List::stream)
+        return multiplierMap.entrySet().stream()
+                .filter(entry -> entry.getValue() > 1.0f)
+                .sorted(Map.Entry.<ElementalType, Float>comparingByValue().reversed())
+                .map(Map.Entry::getKey)
                 .toList();
     }
 
@@ -40,14 +44,20 @@ public record TypingMatchups(Map<ElementalType, Float> multipliers) {
         return filterByMultiplier(0.0f);
     }
 
+    /**
+     * Gets all types that deal < 1.0x damage, sorted (0x, then 0.25x, then 0.5x).
+     */
     public List<ElementalType> getAllResist() {
-        return Stream.of(getResistant(), getSuperResistant(), getImmune())
-                .flatMap(List::stream)
+        return multiplierMap.entrySet().stream()
+                .filter(entry -> entry.getValue() < 1.0f)
+                // Sort ascending (0.0, 0.25, 0.5)
+                .sorted(Map.Entry.comparingByValue())
+                .map(Map.Entry::getKey)
                 .toList();
     }
 
     private List<ElementalType> filterByMultiplier(float target) {
-        return multipliers.entrySet().stream()
+        return multiplierMap.entrySet().stream()
                 .filter(entry -> entry.getValue() == target)
                 .map(Map.Entry::getKey)
                 .toList();
